# myCLib

./: .gitignore  CMakeLists.txt  README.md  build_tests.sh
Unity/src/: CMakeLists.txt
src/: CMakeLists.txt  getnumber.c
test/: CMakeLists.txt  TestRunner.c  Testgetnumber.c
